--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     <button id="requ">Click aqui</button>
     <div id="response"></div>
   </body>
-  <script type="application/lua" src="./render.lua"></script>
+  <script type="application/lua" src="./renderer.lua"></script>
 </html>
